examplefilesdir = $(pkgdatadir)/examples

examplefiles_DATA = 		\
	Echo.sbp		\
	FallingBomb.sbp		\
	HeartBeat.sbp		\
	HelloWorld.sbp		\
	HitExplosion.sbp	\
	Quack.sbp		\
	Tremolo.sbp		\
	Vibrato.sbp		\
	Weapon1.sbp		\
	Weird1.sbp		\
	Weird2.sbp		


EXTRA_DIST = $(examplefiles_DATA)

uninstall-hook:
	-rmdir $(examplefilesdir)
