imagefilesdir = $(pkgdatadir)/images

imagefiles_DATA = 			\
	ADHSR.png			\
	ButtonCollapsed.png		\
	ButtonExpanded.png		\
	ButtonLayoutGrid.png		\
	ButtonLayoutVertical.png	\
	ButtonResizeHandle.png		\
	ButtonSnapToGridDark.png	\
	ButtonSnapToGridOffDark.png	\
	ButtonSnapToGridOff.png		\
	ButtonSnapToGrid.png		\
	LinkGray0_1.png			\
	LinkGray-1_1.png		\
	LinkGrayInf.png			\
	LinkGray.png			\
	LinkGreen0_1.png		\
	LinkGreen-1_1.png		\
	LinkGreenInf.png		\
	LinkGreen.png			\
	LinkRed0_1.png			\
	LinkRed-1_1.png			\
	LinkRedInf.png			\
	LinkRed.png			\
	LinkYellow0_1.png		\
	LinkYellow-1_1.png		\
	LinkYellowInf.png		\
	LinkYellow.png			\
	Logo.png			\
	NodeAdd.png			\
	NodeADSR.png			\
	NodeAverage.png			\
	NodeClamp.png			\
	NodeConstant.png		\
	NodeDelay.png			\
	NodeFilterBandPass.png		\
	NodeFilterHighPass.png		\
	NodeFilterLowPass.png		\
	NodeGrowth.png			\
	NodeInverse.png			\
	NodeMultiply.png		\
	NodeOscillatorNoise.png		\
	NodeOscillatorPulse.png		\
	NodeOscillatorSawtooth.png	\
	NodeOscillatorSine.png		\
	NodeOscillatorTriangle.png	\
	NodeRangeConvert.png		\
	NodeReciprocal.png		\
	NodeSmooth.png			\
	NodeViewWaveform.png		


EXTRA_DIST = $(imagefiles_DATA)

uninstall-hook:
	-rmdir $(imagefilesdir)
